# DashFlow

./: .env  CONTRIBUTING.md  LICENSE  README.md  filter_rules.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
public/fonts/: roboto.txt
src/: App.tsx  globals.css  main.tsx
src-tauri/: .env  Cargo.toml  log.txt  projects.db  tauri.conf.json
src-tauri/Log/: log_2025_01_17_13.txt  log_2025_01_17_22.txt
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs
src-tauri/src/games/: detection.rs  mod.rs  rawg.rs
src-tauri/src/music/: audius.rs  mod.rs  spotify.rs
src/api/: notesApi.ts
src/components/: DashboardLayout.tsx  GsapCard.tsx  Loader.tsx  Modal.tsx  Sidebar.tsx  WeatherCard.tsx
src/components/games/: GameCard.tsx  GameDetailes.tsx  GameSlider.tsx
src/components/home/: AddAppModal.tsx  AppLauncherWidget.tsx  CalendarWidget.tsx  CurrencyRatesWidget.tsx  HotLinksWidget.tsx  MusicPlayerWidget.tsx  ScreenRecorderWidget.tsx  SystemAppsWidget.tsx  SystemMetricsWidget.tsx  SystemSettingsWidget.tsx  TimeWidget.tsx  ToDoWidget.tsx  WeatherWidget.tsx
src/components/music/: Albums.tsx  AudioDbApi.tsx  CurrentTrack.tsx  FeaturedPlaylists.tsx  JamendoApi.tsx  MusicSearch.tsx  NowPlaying.tsx  PlaybackControls.tsx  PlayerControls.tsx  PlayerWidget.tsx  PlaylistList.tsx  PlaylistView.tsx  SearchBar.tsx  SearchResults.tsx  SpotifyApi.tsx  TrackList.tsx  TrendingTracks.tsx
src/context/: PlayerContext.tsx  ScreenRecordingContext.tsx
src/pages/: Games.tsx  Home.tsx  KanbanBoard.tsx  Music.tsx  Notes.tsx  Profiles.tsx  Projects.tsx  Settings.tsx
src/types/: music.ts  types.ts
src/utils/: dateUtils.ts
(+30 files in other folders)
