[package]
name = "DashFlow"
version = "1.0.5"
description = "A Tauri App"
authors = ["DoZhD1k"]
edition = "2021"
default-run = "DashFlow"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dash_flow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.29", features = ["bundled"] }
chrono = "0.4"
webbrowser = "0.6"
walkdir = "2.5"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.28"
log = "0.4"
env_logger = "0.10"
simplelog = "0.11"
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
lazy_static = "1.4"
regex = "1.7"
base64 = "0.21"
windows = "0.48.0"
winapi = { version = "0.3", features = ["winuser"] }
dirs-next = "2.0"
battery = "^0.7"
tauri-plugin-single-instance = "2.2.1"
tauri-plugin-autostart = "2.2.0"
tauri-plugin-updater = "2.4.0"
tauri-plugin-dialog = { version = "2.2.0" }
dirs = "6.0.0"


[[bin]]
name = "DashFlow"
path = "src/main.rs"
windows_subsystem = "windows"

[package.metadata.winres]
OriginalFilename = "DashFlow.exe"
FileDescription = "DashFlow - Your Personal Dashboard"
ProductName = "DashFlow"
LegalCopyright = "© 2025 DoZhD1k"
